:lipstick: Modernised the UI
I modernized the user interface using the latest Adwaita widgets. I also updated the runtime version of the application to GNOME 45 to be able to use the latest Gtk/Adwaita widgets. I also  reorganized the files. I also made so that the desktop file and the appdata file are now translatable.

--- a/data/css/style.css
+++ b/data/css/style.css
@@ -1,10 +1,5 @@
-.launcher-list-item {
-  padding-top: 3px;
-  padding-bottom: 3px;
-  padding-left: 0px;
-  border-radius: 5px;
-}
+/* sidebar */
 
-.bold {
-  font-weight: bold;
+.sidebar-item {
+  padding: 7px;
 }
