WIP Part 3: Steam Integration

--- a/data/css/style.css
+++ b/data/css/style.css
@@ -9,3 +9,23 @@
 .dialog {
   padding: 10px;
 }
+
+.green {
+  color: #82c91e;
+}
+
+.blue {
+  color: #228be6;
+}
+
+.purple {
+  color: #be4bdb;
+}
+
+.orange {
+  color: #fd7e14;
+}
+
+.red {
+  color: #fa5252;
+}
