Add copyright and fix download link

--- a/style.css
+++ b/style.css
@@ -52,6 +52,10 @@ footer {
     margin-top: 15px;
 }
 
+.copyright {
+    margin-top: 15px;
+}
+
 .list {
     list-style-type: none;
     padding-left: 0px;
