Add the ability to change the launch options #2

--- a/data/css/style.css
+++ b/data/css/style.css
@@ -1,16 +1,8 @@
-.sidebar-row {
-  padding: 7px;
-}
-
 .dialog-list {
   background: transparent;
 }
 
-.dialog {
-  padding: 10px;
-}
-
-.action-box {
+.p-10 {
   padding: 10px;
 }
 
