--- a/style.css
+++ b/style.css
@@ -37,6 +37,20 @@ footer {
     }
 }
 
+.features {
+    h2 {
+        margin-bottom: 15px;
+    }
+
+    .accordion {
+        margin-top: 15px;
+    }
+
+    .panel {
+        margin-top: 15px;
+    }
+}
+
 .download {
     h2 {
         margin-bottom: 15px;
@@ -63,4 +77,26 @@ footer {
     li:not(:last-child) {
         margin-bottom: 10px;
     }
+}
+
+
+
+
+.accordion {
+    cursor: pointer;
+    padding: 18px;
+    width: auto;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+    border-radius: 15px;
+}
+
+.panel {
+    padding: 0 18px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
 }
