Fix filter box css

--- a/data/css/style.css
+++ b/data/css/style.css
@@ -51,3 +51,7 @@
 .launchers-popover-list > row:not(:last-child) {
   margin-bottom: 10px;
 }
+
+flowboxchild {
+  background-color: transparent;
+}
